2008-09-09; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-conditions.c:
    * src/sat-cfg.[ch]:
    * src/sat-vis.c:
    Added support for variable twilight threshold in prediction of
    satellite visibility.


2008-09-07; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-rig-ctrl.c:
    * src/gtk-rot-ctrl.[ch]:
    Implemented AOS/LOS count down.
    

2008-09-06; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-freq-knob.[ch]:
    Finished implementation of frequency control knob.
    
    * src/gtk-sat-module.c:
    Include radio controller into module cycle.
    
    * src/gtk-rig-ctrl.c:
    Finished implementation.


2008-09-05; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk.rig.ctrl.[ch]:
    Added files implementing user interface for doppler tuning.
    
    * src/gtk-sat-module-popup.c:
    * src/gtk-sat-module.h:
    Use new doppler tuning UI widget.
    
    * src/gtk-rot-knob.c:
    Don't show minus when value is 0.
    

2008-09-03; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-rot-knob.[ch]:
    Added API functions to get/set range of the control widget.
    
    * src/gtk-rot-ctrl.[ch]:
    Implemented controller algorithm (except device I/O).


2008-08-28; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-rot-knob.c:
    Fixed bug that prevented the knob value to be set to min/max.
    
    * src/gtk-rot-ctrl.[ch]:
    Done some work on rotator control window.
    

2008-08-27; Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch]:
    Added separate fileds for port number and local oscillator ffrequency.
    Added error handling.
    
    * src/sat-pref-rig-editor.c:
    * src/sat-pref-rig-data.h:
    * src/sat-pref-rig.c:
    Added fields for port number and LO frequency.
    
    * src/rotor.conf.[ch]:
    Added field for port number. Added error handling.
    
    * src/sat-pref-rot-data.h:
    * src/sat-pref-rot-editor.c:
    * src/sat-pref-rot.c:
    Added field for port number.

